# cpp_ws

./: .gitignore  .gitmodules  README.md  build.sh  build_ws.sh
asio_ws/: CMakeLists.txt
asio_ws/src/: async_timer.cpp  bind_timer.cpp  completion_handler.cpp  multithread_asio.cpp  sync_timer.cpp
lambda_ws/: CMakeLists.txt
lambda_ws/src/: lambda_basic.cpp
meta_ws/: CMakeLists.txt
meta_ws/include/: main_meta.hpp
meta_ws/src/: main.cpp
thread_ws/: CMakeLists.txt
thread_ws/src/: prod_cons.cpp  prod_cons_future.cpp
union_ws/: CMakeLists.txt
union_ws/src/: union_basic.cpp  union_safe_holds_alternative.cpp  union_safe_visit.cpp
variant_ws/: CMakeLists.txt
variant_ws/src/: polymorphism.cpp  state_machine.cpp  type_holder.cpp
web2os/: .dockerignore  CMakeLists.txt  Dockerfile  docker-compose.yml
web2os/config/: config.json
web2os/db/: users.db  web2os.db
web2os/include/config/: config.hpp
web2os/include/database/: database.hpp
web2os/include/middleware/: auth_middleware.hpp
web2os/include/server/: router.hpp  server.hpp  session_manager.hpp
web2os/src/: main.cpp
web2os/src/config/: config.cpp
web2os/src/database/: database.cpp
web2os/src/server/: middleware.cpp  router.cpp  server.cpp  session_manager.cpp
web2os/web/: index.html
web2os/web/pages/: login.html  profile.html  signup.html
